[gd_scene load_steps=11 format=3 uid="uid://w1um3yfsfbf2"]

[ext_resource type="Script" uid="uid://bfqlncjkul7r5" path="res://unit/plant/CherryBomb/cherry_bomb_explosion_animation.gd" id="1_8j1if"]
[ext_resource type="Texture2D" uid="uid://cgwkx8mv32yaq" path="res://unit/plant/CherryBomb/aftermath_explosion_mark.png" id="1_spi52"]
[ext_resource type="Texture2D" uid="uid://1vng4h3kft1x" path="res://unit/plant/CherryBomb/aftermath_large_impact.png" id="2_8j1if"]
[ext_resource type="Texture2D" uid="uid://bf1xrdnxb2el8" path="res://unit/plant/CherryBomb/aftermath_small_impact.png" id="3_xswo7"]
[ext_resource type="Texture2D" uid="uid://b864jecr3xqqe" path="res://unit/plant/CherryBomb/aftermath_text_chaboof.png" id="4_mtskq"]

[sub_resource type="Animation" id="Animation_cmubk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/AftermathTextChaboof:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AftermathExplosionMark:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AftermathLargeImpact:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AftermathSmallImpact:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AftermathLargeImpact:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.911743, -42.6018)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AftermathLargeImpact:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.86982, 1.67398)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/AftermathTextChaboof:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 20)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/AftermathTextChaboof:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AftermathSmallImpact:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Node2D:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 20)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("AftermathExplosionMark:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("explosion_range/collision:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pui1u"]
resource_name = "explode"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/AftermathTextChaboof:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AftermathExplosionMark:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AftermathLargeImpact:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AftermathSmallImpact:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AftermathLargeImpact:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-0.911743, -42.6018), Vector2(-0.912, -63.912)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AftermathLargeImpact:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(1.86982, 1.67398), Vector2(1.87, 3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/AftermathTextChaboof:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.7, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 20), Vector2(-1, -121)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/AftermathTextChaboof:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2, 1.43333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AftermathSmallImpact:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Node2D:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.0333333, 0.057222, 0.0766653, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(8, 20), Vector2(9.98, 20), Vector2(-1.995, 17.555), Vector2(9.98, 20), Vector2(6.445, 17.555), Vector2(8, 20), Vector2(6.445, 17.555)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("AftermathExplosionMark:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.1954, 1.43494),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("explosion_range/collision:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.167921),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qqkus"]
_data = {
&"RESET": SubResource("Animation_cmubk"),
&"explode": SubResource("Animation_pui1u")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugfa7"]
size = Vector2(335, 488)

[sub_resource type="CircleShape2D" id="CircleShape2D_8j1if"]
radius = 300.707

[node name="CherryBomb_Explosion_Animation" type="Node2D"]
script = ExtResource("1_8j1if")

[node name="cherry_bomb_animation_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qqkus")
}
speed_scale = 0.7

[node name="AftermathExplosionMark" type="Sprite2D" parent="."]
visible = false
z_index = 26
position = Vector2(-0.911743, -42.6018)
scale = Vector2(1.86982, 1.67398)
texture = ExtResource("1_spi52")

[node name="AftermathLargeImpact" type="Sprite2D" parent="."]
visible = false
z_index = 26
position = Vector2(-0.911743, -42.6018)
scale = Vector2(1.86982, 1.67398)
texture = ExtResource("2_8j1if")

[node name="AftermathSmallImpact" type="Sprite2D" parent="."]
visible = false
z_index = 26
position = Vector2(-0.911743, -42.6018)
scale = Vector2(1.86982, 1.67398)
texture = ExtResource("3_xswo7")

[node name="Node2D" type="Node2D" parent="."]
z_index = 26
position = Vector2(8, 20)
scale = Vector2(1.86982, 1.67398)

[node name="AftermathTextChaboof" type="Sprite2D" parent="Node2D"]
visible = false
z_index = 26
position = Vector2(8, 20)
texture = ExtResource("4_mtskq")

[node name="explosion_range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="explosion_range"]
position = Vector2(0.5, -5)
shape = SubResource("RectangleShape2D_ugfa7")
debug_color = Color(0.760909, 0.0458138, 1.92523e-07, 0.42)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_8j1if")
debug_color = Color(0.601094, 0.543041, 1.92523e-07, 0.42)

[connection signal="animation_finished" from="cherry_bomb_animation_player" to="." method="_on_cherry_bomb_animation_player_animation_finished"]
[connection signal="body_entered" from="explosion_range" to="." method="_on_explosion_range_body_entered"]
